# vmsavedstatetodump-rs

./: Cargo.toml  README.md  build.rs
src/: .gitignore  Cargo.toml  lib.rs  mindumpdef.rs  vmsavedstatedump.rs  vmsavedstatedump_bindings.rs  vmsavedstatedumpdefs.rs
src/vmsavedstatedump/: Cargo.toml  build.rs
src/vmsavedstatedump-rs/: Cargo.toml
src/vmsavedstatedump-rs/src/: lib.rs  vmsavedstatedump.rs  vmsavedstatedumpdefs.rs
src/vmsavedstatedump-rs/tests/: integration_test.rs
src/vmsavedstatedump/src/: lib.rs  vmsavedstatedump.rs  vmsavedstatedumpdefs.rs  vmsavedstatedumpprovider.rs
src/vmsavedstatedump/tests/: integration_test.rs
src/vmsavedstatedump/tests/common/: mod.rs
src/vmsavedstatedumpcli/: Cargo.toml
tests/: integration_test.rs
vmsavedstatedump-rs/: Cargo.toml
vmsavedstatedump-rs/src/: lib.rs  vmsavedstatedump.rs  vmsavedstatedump_raw_bindings.rs
vmsavedstatedump-rs/tests/: integration_test.rs
vmsavedstatedumpcli/: Cargo.toml
vmsavedstatedumpcli/src/: main.rs
