[package]
name = "vmsavedstatedump-rs"
version = "0.1.0"
authors = ["Rafael Alcaraz Mercado <ramerc@microsoft.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust abstractions of VmSavedStateDumpProvider Windows 10 SDK API."
repository = "https://github.com/rafawo/vmsavedstatedump-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "vmsavedstatedump"]
build = "build.rs"

[dependencies]
winapi = { version = "0.3.6", features = ["minwindef"] }
