[package]
name = "vmsavedstatedump-rs"
version = "0.1.0"
authors = ["rafawo <rafawo1@hotmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust abstractions of VmSavedStateDumpProvider Windows 10 SDK API."
repository = "https://github.com/rafawo/vmsavedstatedump-rs"
readme = "README.md"
keywords = ["windows", "vmsavedstatedump", "hyper-v", "vmrs file"]
build = "build.rs"

[dependencies]
libc = "0.2.44"
widestring = "0.4.0"
